# vta-video-overlay

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README_RU.md  build.cmd  build.sh  lupdate.cmd  lupdate.sh  pyproject.toml  requirements.txt  translation_ru.ts  uic.cmd  uic.sh
assets/: CropSelectionWindow.ui  MainWindow.ui  icon.pdn  resources.qrc
cli/: __main__.py
devtools/: linguist_fixer.py  splash_gen.py
example/: Platinum.Tda
ui/src/: MainWindow.ui
vta_video_overlay/: AboutWindow.py  DataCollections.py  FFmpeg.py  MainWindow.py  OpenCV.py  Overlay.py  TdaFile.py  Timestamps.py  VIdeoData.py  VideoData.py  Worker.py  __main__.py  about_window.py  aligned_data.py  config.py  controller.py  crop_selection_widgets.py  crop_selection_window.py  data_collections.py  data_file.py  enums.py  excepthook.py  ffmpeg_utils.py  file_loader.py  file_widget_base.py  frame_renderer.py  graph_overlay.py  graph_preview_dialog.py  main_window.py  make_frame.py  opencv_frame.py  opencv_processor.py  pil_frame.py  pipeline.py  plotter.py  preview_worker.py  tda_file.py  tda_headers.py  temp_dir_manager.py  video_context.py  (+5 more)
