[tool.poetry]
name = "vta-video-overlay"
version = "0.3.1"
description = ""
authors = ["Илья Олегович Юрьев <i.o.yurev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.6.2"
ffmpeg-progress-yield = "^0.7.8"
pandas = "^2.2.1"
opencv-python = "^4.9.0.80"
openpyxl = "^3.1.2"
loguru = "^0.7.2"
ffmpeg-python = "^0.2.0"
xlsxwriter = "^3.2.0"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.1"
commitizen = "^3.18.0"
mypy = "^1.9.0"
autoflake = "^2.3.0"
pyinstaller = "^6.5.0"
pillow = "^10.2.0"

[tool.commitizen]
version = "0.3.1"
version_files = [
    "vta_video_overlay/__version__.py",
    "pyproject.toml:version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
