[tool.poetry]
name = "vta-video-overlay"
version = "0.6.0"
description = ""
authors = ["Ilya O. Yurev <i.o.yurev@yandex.ru>"]
readme = "README.md"
include = [
    "vta_video_overlay/ui/MainWindow.py",
    "vta_video_overlay/ui/resources_rc.py",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.6.2"
ffmpeg-progress-yield = "^0.7.8"
pandas = "^2.2.1"
opencv-python = "^4.9.0.80"
openpyxl = "^3.1.2"
loguru = "^0.7.2"
ffmpeg-python = "^0.2.0"
xlsxwriter = "^3.2.0"
click = "^8.1.7"
tqdm = "^4.66.5"
pillow = "^11.1.0"
pydantic = "^2.11.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.1"
commitizen = "^3.18.0"
mypy = "^1.9.0"
autoflake = "^2.3.0"
pyinstaller = "^6.5.0"
isort = "^5.13.2"

[tool.commitizen]
version = "0.6.0"
version_files = [
    "vta_video_overlay/__version__.py",
    "pyproject.toml:version"
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
